# stationaryorbit.mathematics

./: .gitignore  CMakeLists.txt  README.md  stationaryorbit.mathematics.code-workspace
cmake/: Findstationaryorbit.graphics-core.cmake
include/stationaryorbit/: mathematics.algorithm.hpp  mathematics.fuzzy.hpp  mathematics.primitives.hpp  mathematics.set.hpp
include/stationaryorbit/mathematics/: compensatedfloat.hpp  crispset.hpp  differencial.hpp  fuzzybool.hpp  fuzzyreasoning.hpp  fuzzyrelation.hpp  fuzzyset.hpp  integral.hpp  mathematicfunction.hpp  newtoncoef.hpp  polynomialfunction.hpp  taylorseries.hpp
src/: CMakeLists.txt  differencial.cpp  fuzzybool.cpp  integral.cpp  newtoncoef.cpp  polynomialfunction.cpp  taylorseries.cpp
test/: CMakeLists.txt  compensatedfloat.cpp  differencial.cpp  newtoncoef.cpp  polynomialfunction.cpp  taylorseries.cpp  test-mathematics.cpp
